[package]
name = "libradicl"
version = "0.9.0"
authors = [
  "Avi Srivastava <avi.srivastava@nyu.edu>",
  "Hirak Sarkar <hirak_sarkar@hms.harvard.edu>",
  "Dongze He <dhe17@umd.edu>",
  "Mohsen Zakeri <mzakeri@cs.umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
edition = "2021"
description = "support library for alevin-fry"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/libradicl"
homepage = "https://github.com/COMBINE-lab/libradicl"
documentation = "https://docs.rs/libradicl"
include = ["src/*.rs", "examples/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
  "single-nucleus",
  "RNA-velocity",
]
categories = ["command-line-utilities", "science"]

[dependencies]
snap = "1"
scroll = "0.12.0"
num = "0.4.1"
ahash = "0.8.9"
serde = { version = "1.0.197", features = ["derive"] }
dashmap = "^5.5.3"
bio-types = "1.0.1"
smallvec = "1.13.1"
noodles-bam = "0.56.0"
noodles-sam = "0.53.0"
anyhow = "1.0.80"
itertools = "0.12.1"

[dev-dependencies]
needletail="0.5.1"
