[package]
name = "libradicl"
version = "0.10.0"
authors = [
  "Avi Srivastava <avi.srivastava@nyu.edu>",
  "Hirak Sarkar <hirak_sarkar@hms.harvard.edu>",
  "Dongze He <dhe17@umd.edu>",
  "Mohsen Zakeri <mzakeri@cs.umd.edu>",
  "Noor Pratab Singh <npsingh@umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
edition = "2021"
description = "support library for alevin-fry"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/libradicl"
homepage = "https://github.com/COMBINE-lab/libradicl"
documentation = "https://docs.rs/libradicl"
include = ["src/*.rs", "examples/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
  "ATAC-seq",
  "single-nucleus",
]
categories = ["command-line-utilities", "science"]

[dependencies]
snap = "1"
scroll = "0.12.0"
num = "0.4.3"
ahash = "0.8.11"
serde = { version = "1.0.204", features = ["derive"] }
dashmap = "^6.0.1"
bio-types = "1.0.3"
smallvec = "1.13.2"
anyhow = "1.0.86"
itertools = "0.13.0"
bytemuck = { version = "1.16.3", features = ["aarch64_simd"] }
derivative = "2.2.0"
crossbeam-queue = "0.3.11"
noodles = { version = "0.85.0", features = ["bam", "sam"] }

[dev-dependencies]
needletail = "0.6.1"
indicatif = "0.17.9"
